--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
+    "@types/react-redux": "^7.1.16",
+    "@types/redux": "^3.6.0",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-asset": "~8.3.1",
@@ -35,7 +37,9 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
-    "react-navigation-header-buttons": "^7.0.1"
+    "react-navigation-header-buttons": "^7.0.1",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
