--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "expo-app-loading": "^1.0.3",
     "expo-asset": "~8.3.1",
     "expo-constants": "~10.1.3",
+    "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
+    "expo-image-picker": "~10.1.4",
     "expo-linking": "~2.2.3",
+    "expo-permissions": "~12.0.1",
     "expo-splash-screen": "~0.10.2",
+    "expo-sqlite": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.1.0",
     "react": "16.13.1",
@@ -39,7 +43,8 @@
     "react-native-web": "~0.13.12",
     "react-navigation-header-buttons": "^7.0.1",
     "react-redux": "^7.2.4",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
